--- a/css/main.css
+++ b/css/main.css
@@ -2616,7 +2616,7 @@ html.no-csstransitions .home-content__main {
 
 .s-testimonials {
     background-color: #0D0A0B;
-    background-image: url("../images/testimonial-bg.jpg");
+    background-image: url("../images/testimonial-bg.jpf");
     background-repeat: no-repeat;
     background-position: center, center;
     padding-top: 9.6rem;
