--- a/css/fonts.css
+++ b/css/fonts.css
@@ -10,6 +10,7 @@
 
 @font-face {
     font-family: "librebaskerville-regular";
+    font-display: auto;
     src: url("../fonts/librebaskerville/librebaskerville-regular-webfont.woff2") format("woff2"), url("../fonts/librebaskerville/librebaskerville-regular-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -17,6 +18,7 @@
 
 @font-face {
     font-family: "librebaskerville-italic";
+    font-display: auto;
     src: url("../fonts/librebaskerville/librebaskerville-italic-webfont.woff2") format("woff2"), url("../fonts/librebaskerville/librebaskerville-italic-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -24,6 +26,7 @@
 
 @font-face {
     font-family: "librebaskerville-bold";
+    font-display: auto;
     src: url("../fonts/librebaskerville/librebaskerville-bold-webfont.woff2") format("woff2"), url("../fonts/librebaskerville/librebaskerville-bold-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -36,6 +39,7 @@
 
 @font-face {
     font-family: "montserrat-black";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-black-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-black-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -43,6 +47,7 @@
 
 @font-face {
     font-family: "montserrat-extrabold";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-extrabold-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-extrabold-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -50,6 +55,7 @@
 
 @font-face {
     font-family: "montserrat-bold";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-bold-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -57,6 +63,7 @@
 
 @font-face {
     font-family: "montserrat-semibold";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-semibold-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-semibold-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -64,6 +71,7 @@
 
 @font-face {
     font-family: "montserrat-medium";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-medium-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-medium-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -71,6 +79,7 @@
 
 @font-face {
     font-family: "montserrat-regular";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-regular-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -78,6 +87,7 @@
 
 @font-face {
     font-family: "montserrat-light";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-light-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-light-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -85,6 +95,7 @@
 
 @font-face {
     font-family: "montserrat-extralight";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-extralight-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-extralight-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
@@ -92,6 +103,7 @@
 
 @font-face {
     font-family: "montserrat-thin";
+    font-display: auto;
     src: url("../fonts/montserrat/montserrat-thin-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-thin-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
