--- a/css/main.css
+++ b/css/main.css
@@ -1797,10 +1797,10 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content h1 {
-    font-family: "librebaskerville-bold", serif;
-    color: #FFFFFF;
-    font-size: 6rem;
-    line-height: 1.35;
+    font-family: "montserrat-extralight", sans-serif;
+    color: #eaeaea;
+    font-size: 0.5rem;
+    line-height: 1.0;
     margin-top: 0;
 }
 
