--- a/css/main.css
+++ b/css/main.css
@@ -1797,7 +1797,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content h1 {
-    font-family: "montserrat-extralight", sans-serif;
+    font-family: "librebaskerville-regular", serif;
     color: #eaeaea;
     font-size: 0.5rem;
     line-height: 1.0;
