--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@ em, i, strong, b {
 }
 
 em, i {
-    font-family: "librebaskerville-italic", serif;
+    font-family: "librebaskerville-regular", serif;
 }
 
 strong, b {
