add netlify cms

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 <head>
 
-
+   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
