--- a/css/main.css
+++ b/css/main.css
@@ -1797,10 +1797,10 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content h1 {
-    font-family: "librebaskerville-regular", serif;
-    color: #eaeaea;
+    font-family: "montserrat-bold", sans-serif;
+    color: #f5f5f5;
     font-size: 0.5rem;
-    line-height: 1.0;
+    line-height: 1.1;
     margin-top: 0;
 }
 
