--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body {
  * ------------------------------------------------------------------- */
 
 a {
-    color: #449cff;
+    color: #f91e15;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
@@ -377,7 +377,7 @@ ul.disc li::before {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    background: #449cff;
+    background: #f91e15;
     position: absolute;
     left: -17px;
     top: 11px;
@@ -386,7 +386,7 @@ ul.disc li::before {
 
 dt {
     margin: 0;
-    color: #449cff;
+    color: #f91e15;
 }
 
 dd {
@@ -517,7 +517,7 @@ form,
 }
 
 .pace .pace-progress {
-    background: #449cff;
+    background: #f91e15;
     position: fixed;
     z-index: 900;
     top: 0;
@@ -562,7 +562,7 @@ form,
     margin-left: -30px;
     margin-top: -30px;
     padding: 0;
-    background-color: #449cff;
+    background-color: #f91e15;
     border-radius: 100%;
     -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
     animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -830,8 +830,8 @@ button.btn--primary:focus,
 input[type="submit"].btn--primary:focus,
 input[type="reset"].btn--primary:focus,
 input[type="button"].btn--primary:focus {
-    background: #449cff;
-    border-color: #449cff;
+    background: #f91e15;
+    border-color: #f91e15;
 }
 
 
@@ -860,8 +860,8 @@ input[type="button"].btn--primary:focus {
 }
 
 .btn--stroke:hover, button.btn--stroke:hover {
-    border: 0.3rem solid #449cff;
-    color: #449cff;
+    border: 0.3rem solid #f91e15;
+    color: #f91e15;
 }
 
 .btn--pill, button.btn--pill {
@@ -1087,7 +1087,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .stats-tabs li a:hover {
-    color: #449cff;
+    color: #f91e15;
 }
 
 .stats-tabs li a em {
@@ -1276,7 +1276,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .section-intro h3 {
     font-family: "montserrat-semibold", sans-serif;
     font-size: 2rem;
-    color: #449cff;
+    color: #f91e15;
     text-transform: uppercase;
     letter-spacing: .15rem;
     margin-top: 0;
@@ -1380,11 +1380,11 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .blog-list .blog-date {
     font-family: "montserrat-regular", sans-serif;
     font-size: 1.5rem;
-    color: #449cff;
+    color: #f91e15;
 }
 
 .blog-list .blog-date a {
-    color: #449cff;
+    color: #f91e15;
 }
 
 .blog-list .blog-date a:hover,
@@ -1409,7 +1409,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .blog-list .blog-cat a:hover,
 .blog-list .blog-cat a:focus,
 .blog-list .blog-cat a:active {
-    color: #449cff;
+    color: #f91e15;
 }
 
 .blog-list .blog-cat a::after {
@@ -1660,7 +1660,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 .header-nav li.current a {
     font-family: "montserrat-extrabold", sans-serif;
-    color: #449cff;
+    color: #f91e15;
 }
 
 
@@ -1775,7 +1775,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .home-content h3 {
     font-family: "montserrat-bold", sans-serif;
     font-size: 1.8rem;
-    color: #449cff;
+    color: #f91e15;
     text-transform: uppercase;
     letter-spacing: .5rem;
     position: relative;
@@ -1789,7 +1789,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     content: "";
     width: 60px;
     height: 2px;
-    background-color: #449cff;
+    background-color: #f91e15;
     margin-top: -1.5px;
     position: absolute;
     left: 0;
@@ -1852,8 +1852,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content__scroll a::after {
-    border-bottom: 2px solid #449cff;
-    border-right: 2px solid #449cff;
+    border-bottom: 2px solid #f91e15;
+    border-right: 2px solid #f91e15;
     content: '';
     display: block;
     height: 8px;
@@ -1927,7 +1927,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-social span {
-    color: #449cff;
+    color: #f91e15;
     right: 3.6rem;
     font-size: 1.3rem;
     opacity: 0;
@@ -2981,7 +2981,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .stats__col--highlight .stats__count::after {
-    background-color: #449cff;
+    background-color: #f91e15;
 }
 
 .stats__col--highlight h4 {
@@ -3093,7 +3093,7 @@ html.no-csstransitions .home-content__main {
     padding: 0 2rem;
     margin: 0;
     color: #FFFFFF;
-    background: #449cff;
+    background: #f91e15;
 }
 
 .s-contact .form-field label::after {
@@ -3104,7 +3104,7 @@ html.no-csstransitions .home-content__main {
     margin-top: -6px;
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
-    border-right: 5px solid #449cff;
+    border-right: 5px solid #f91e15;
 }
 
 .contact__main {
@@ -3148,8 +3148,8 @@ html.no-csstransitions .home-content__main {
 
 .contact__form button {
     margin-top: 4.2rem;
-    background-color: #449cff;
-    border-color: #449cff;
+    background-color: #f91e15;
+    border-color: #f91e15;
 }
 
 .message-warning, .message-success {
@@ -3309,7 +3309,7 @@ footer {
 }
 
 footer a, footer a:visited {
-    color: #449cff;
+    color: #f91e15;
 }
 
 footer a:hover, footer a:focus {
