--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ body {
     font-family: "montserrat-regular", serif;
     font-size: 1.6rem;
     line-height: 1.875;
-    color: #5f5f5f;
+    color: #9b9b9b;
     margin: 0;
     padding: 0;
 }
@@ -120,7 +120,7 @@ a:focus {
 
 h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
     font-family: "montserrat-medium", sans-serif;
-    color: #0D0A0B;
+    color: #9b9b9b;
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -200,7 +200,7 @@ p.lead {
     font-size: 2rem;
     line-height: 1.8;
     margin-bottom: 3.6rem;
-    color: #0D0A0B;
+    color: #9b9b9b;
 }
 
 @media only screen and (max-width: 800px) {
@@ -240,7 +240,7 @@ blockquote:before {
     font-size: 10rem;
     line-height: 0px;
     margin: 0;
-    color: rgba(0, 0, 0, 0.15);
+    color: #9b9b9b;
     font-family: arial, sans-serif;
     position: absolute;
     top: 3.6rem;
@@ -252,7 +252,7 @@ blockquote p {
     padding: 0;
     font-size: 2.1rem;
     line-height: 1.857;
-    color: #0D0A0B;
+    color: #9b9b9b;
 }
 
 blockquote cite {
@@ -448,7 +448,7 @@ th, td {
 }
 
 th {
-    color: #0D0A0B;
+    color: #9b9b9b;
     font-family: "montserrat-bold", sans-serif;
 }
 
@@ -946,7 +946,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     line-height: 6rem;
     text-indent: 0;
     background: transparent;
-    color: #000000;
+    color: #9b9b9b;
 }
 
 
@@ -1292,7 +1292,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     display: inline-block;
     height: 1px;
     width: 240px;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
     text-align: center;
 }
 
@@ -2199,7 +2199,7 @@ html.no-csstransitions .home-content__main {
 .s-about {
     padding-top: 15rem;
     padding-bottom: 9rem;
-    background-color: #FFFFFF;
+    background-color: #000000;
     position: relative;
 }
 
@@ -2355,7 +2355,7 @@ html.no-csstransitions .home-content__main {
 .s-works {
     padding-top: 15rem;
     padding-bottom: 15.6rem;
-    background-color: #f1f1f1;
+    background-color: #000000;
     position: relative;
 }
 
