--- a/404/style.css
+++ b/404/style.css
@@ -11,17 +11,17 @@
 }
 
 .cls-4 {
-  fill: #0d509a;
+  fill: #9a0d0d;
 }
 
 .cls-5 {
-  fill: #68a8ef;
+  fill: #ef6868;
 }
 
 .cls-6,
 .cls-7,
 .cls-8 {
-  fill: #0d509a;
+  fill: #9a0d0d;
 }
 
 .cls-10,
@@ -34,23 +34,23 @@
 }
 
 .cls-9 {
-  fill: #a3cdfb;
+  fill: #fba3a3;
 }
 
 .cls-11 {
-  fill: #0d509a;
+  fill: #9a0d0d;
 }
 
 .cls-12 {
-  fill: #163557;
+  fill: #571616;
 }
 
 .cls-13 {
-  fill: #163557;
+  fill: #571616;
 }
 
 .cls-14 {
-  fill: #0d509a;
+  fill: #9a0d0d;
 }
 
 
